User -> Member 도메인 이름 변경 및 사이드 이펙트 방지